# FabScan100

./: .gitignore  README.md  README_Mac.md  README_Ubuntu.md  README_Windows.md
arduino/FabScanArduinoFirmware/: FabScanArduinoFirmware.ino
arduino/TestFabScanShieldV11/: TestFabScanShieldV11.ino
cube/: mainwidget.cpp
lasercutter/: BoxBackMiddle.cdr  BoxBackMiddle.dxf  BoxBottom.cdr  BoxBottom.dxf  BoxLeftSide.cdr  BoxLeftSide.dxf  BoxRightSide.cdr  BoxRightSide.dxf  BoxTopSlopeFront.cdr  BoxTopSlopeFront.dxf  CamLaserTurnTableHolder.cdr  CamLaserTurnTableHolder.dxf
qtTest/: CMakeLists.txt  FSDefines.h  Makefile  configuration.xml  cup.pcd  fsconfiguration.cpp  fsconfiguration.h  fscontroller.cpp  fscontroller.h  fscontrolpanel.cpp  fscontrolpanel.h  fscontrolpanel.ui  fsdefines.h  fsdialog.cpp  fsdialog.h  fsdialog.ui  fsgeometries.h  fshader.glsl  fslaser.cpp  fslaser.h  fsmodel.cpp  fsmodel.h  fsserial.cpp  fsserial.h  fsstepper.cpp  fsstepper.h  fsturntable.cpp  fsturntable.h  fsvision.cpp  fsvision.h  fswebcam.cpp  fswebcam.h  fswebcam_linux.cpp  fswebcam_osx.cpp  fswebcam_unix.cpp  fswebcam_unix.h  fswebcam_win.cpp  fswebcam_win.h  geometryengine.cpp  geometryengine.h  (+20 more)
qtTest/qextserialport-1.2beta2/: .hg_archival.txt  .hgtags
qtTest/qextserialport-1.2beta2/examples/event/: PortListener.h
qtTest/qtTest.app/Contents/: Info.plist
qtTest/qtTest.app/Contents/MacOS/: cup.pcd  mesh.ply  qtTest
scans/UHU/: UHU.pcd
scans/bigCub/: bigCub.pcd  bigCub.ply  bigCub.pts  bigCub.stl  bigCub2.pcd  bigCub2.ply  bigCub2.pts  bigCub2.stl
scans/bigDuck/: bigDuck.pcd  bigDuck.ply  bigDuck.stl  bigDuck2.ply  bigDuck2.pts  bigDuck2.stl
scans/blueDuck/: blueDuck.pcd
scans/colorDuck/: duckHQ.pcd  duckHQ2.pcd
scans/cup/: cup.pcd
scans/laptopDuck/: laptopDuck.pcd  laptopDuck.ply  laptopDuck.pts
scans/ovalCub/: ovalCub.pcd  ovalCub.ply  ovalCub.pts
scans/smallDuck/: smallDuck.pcd  smallDuck.ply  smallDuck.pts
